# config-and-CI

./: Makefile  README.md  pyproject.toml  sales_summary.py  setup.cfg
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
data/: sample_sales.csv  sample_sales_cp932.csv  sample_sales_error.csv
tests/: test_sales_summary.py
