[metadata]
name = sales-summary-cli
version = 0.1.0
description = CSVの売上データを商品別に集計する小さなCLIツール
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.9
py_modules =
    sales_summary

[options.extras_require]
dev =
    pytest>=8.4,<9
    ruff>=0.14,<1
